--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cadastro-aluno",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://danilolucasmd.github.io/cadastro-aluno",
   "dependencies": {
     "bootstrap": "^4.0.0",
     "react": "^16.1.1",
@@ -21,9 +22,12 @@
     "build-js": "NODE_PATH=src/ react-scripts build",
     "build": "npm-run-all build-css build-js",
     "test": "NODE_PATH=src/ react-scripts test --env=jsdom",
-    "eject": "NODE_PATH=src/ react-scripts eject"
+    "eject": "NODE_PATH=src/ react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
+    "gh-pages": "^1.1.0",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.2"
   }
